@@ -3,22 +3,31 @@
 
 package com.azure.messaging.eventhubs;
 
+import com.azure.core.amqp.AmqpClientOptions;
 import com.azure.core.amqp.AmqpRetryOptions;
 import com.azure.core.amqp.AmqpTransportType;
-import com.azure.core.amqp.ProxyAuthenticationType;
 import com.azure.core.amqp.ProxyOptions;
+import com.azure.core.amqp.client.traits.AmqpTrait;
+import com.azure.core.amqp.implementation.AmqpLinkProvider;
 import com.azure.core.amqp.implementation.AzureTokenManagerProvider;
 import com.azure.core.amqp.implementation.ConnectionOptions;
 import com.azure.core.amqp.implementation.ConnectionStringProperties;
 import com.azure.core.amqp.implementation.MessageSerializer;
+import com.azure.core.amqp.implementation.ReactorConnectionCache;
 import com.azure.core.amqp.implementation.ReactorHandlerProvider;
 import com.azure.core.amqp.implementation.ReactorProvider;
 import com.azure.core.amqp.implementation.StringUtil;
 import com.azure.core.amqp.implementation.TokenManagerProvider;
-import com.azure.core.amqp.implementation.TracerProvider;
+import com.azure.core.amqp.implementation.handler.ConnectionHandler;
+import com.azure.core.amqp.implementation.handler.WebSocketsConnectionHandler;
 import com.azure.core.amqp.models.CbsAuthorizationType;
 import com.azure.core.annotation.ServiceClientBuilder;
 import com.azure.core.annotation.ServiceClientProtocol;
+import com.azure.core.client.traits.AzureNamedKeyCredentialTrait;
+import com.azure.core.client.traits.AzureSasCredentialTrait;
+import com.azure.core.client.traits.ConfigurationTrait;
+import com.azure.core.client.traits.ConnectionStringTrait;
+import com.azure.core.client.traits.TokenCredentialTrait;
 import com.azure.core.credential.AzureNamedKeyCredential;
 import com.azure.core.credential.AzureSasCredential;
 import com.azure.core.credential.TokenCredential;
@@ -27,7 +36,10 @@ import com.azure.core.util.ClientOptions;
 import com.azure.core.util.Configuration;
 import com.azure.core.util.CoreUtils;
 import com.azure.core.util.logging.ClientLogger;
+import com.azure.core.util.metrics.Meter;
+import com.azure.core.util.metrics.MeterProvider;
 import com.azure.core.util.tracing.Tracer;
+import com.azure.core.util.tracing.TracerProvider;
 import com.azure.messaging.eventhubs.implementation.ClientConstants;
 import com.azure.messaging.eventhubs.implementation.EventHubAmqpConnection;
 import com.azure.messaging.eventhubs.implementation.EventHubConnectionProcessor;
@@ -38,17 +50,19 @@ import reactor.core.publisher.Flux;
 import reactor.core.scheduler.Scheduler;
 import reactor.core.scheduler.Schedulers;
 
-import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
-import java.net.Proxy;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.ServiceLoader;
+import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.regex.Pattern;
+import java.util.function.Supplier;
+
+import static com.azure.messaging.eventhubs.implementation.ClientConstants.AZ_NAMESPACE_VALUE;
+import static com.azure.messaging.eventhubs.implementation.ClientConstants.CONNECTION_ID_KEY;
 
 /**
  * This class provides a fluent builder API to aid the instantiation of {@link EventHubProducerAsyncClient}, {@link
@@ -59,48 +73,147 @@ import java.util.regex.Pattern;
  * <strong>Credentials are required</strong> to perform operations against Azure Event Hubs. They can be set by using
  * one of the following methods:
  * <ul>
- * <li>{@link #connectionString(String) connectionString(String)} with a connection string to a specific Event Hub.
- * </li>
- * <li>{@link #connectionString(String, String) connectionString(String, String)} with an Event Hub <i>namespace</i>
- * connection string and the Event Hub name.</li>
- * <li>{@link #credential(String, String, TokenCredential) credential(String, String, TokenCredential)} with the
- * fully qualified namespace, Event Hub name, and a set of credentials authorized to use the Event Hub.
- * </li>
+ *      <li>{@link #connectionString(String)} with a connection string to a specific Event Hub.</li>
+ *      <li>{@link #connectionString(String, String)} with an Event Hub <i>namespace</i> connection string and the Event
+ *      Hub name.</li>
+ *      <li>{@link #credential(String, String, TokenCredential)} with the fully qualified namespace, Event Hub name, and
+ *      a set of credentials authorized to use the Event Hub.</li>
+ *      <li>{@link #credential(String, String, AzureSasCredential)} with the fully qualified namespace, Event Hub name,
+ *      and a shared access signature for the Event Hub.</li>
+ *      <li>{@link #credential(String, String, AzureNamedKeyCredential)} with the fully qualified namespace,
+ *      Event Hub name, and a named key credential.  The named key can be found in the Azure Portal by navigating to the
+ *      Event Hub resource, selecting "Shared access policies" under the Settings section.</li>
+ *      <li>{@link #credential(TokenCredential)}, {@link #credential(AzureSasCredential)}, and
+ *      {@link #credential(AzureNamedKeyCredential)} overloads can be used with its respective credentials.
+ *      {@link #fullyQualifiedNamespace(String)} and {@link #eventHubName(String)} must be set as well.</li>
  * </ul>
  *
  * <p>
- * In addition, the <strong>consumer group</strong> is required when creating {@link EventHubConsumerAsyncClient} or
+ * In addition, the {@link #consumerGroup(String)} is required when creating {@link EventHubConsumerAsyncClient} or
  * {@link EventHubConsumerClient}.
  * </p>
  *
- * <p><strong>Creating an asynchronous {@link EventHubProducerAsyncClient} using Event Hubs namespace connection string
- * </strong></p>
- * <p>In the sample, the namespace connection string is used to create an asynchronous Event Hub producer. Notice that
- * {@code "EntityPath"} <b>is not</b> a component in the connection string.</p>
+ * <p>The credential used in the following samples is {@code DefaultAzureCredential} for authentication. It is
+ * appropriate for most scenarios, including local development and production environments. Additionally, we recommend
+ * using
+ * <a href="https://learn.microsoft.com/azure/active-directory/managed-identities-azure-resources/">managed identity</a>
+ * for authentication in production environments.  You can find more information on different ways of authenticating and
+ * their corresponding credential types in the
+ * <a href="https://learn.microsoft.com/java/api/overview/azure/identity-readme">Azure Identity documentation"</a>.
+ * </p>
  *
- * {@codesnippet com.azure.messaging.eventhubs.eventhubasyncproducerclient.instantiation}
+ * <p><strong>Sample: Construct a {@link EventHubProducerAsyncClient}</strong></p>
  *
- * <p><strong>Creating a synchronous {@link EventHubConsumerClient} using an Event Hub instance connection string
- * </strong></p>
- * <p>In the sample, the namespace connection string is used to create a synchronous Event Hub consumer. Notice that
- * {@code "EntityPath"} <b>is</b> in the connection string.</p>
+ * <p>The following code sample demonstrates the creation of the asynchronous client
+ * {@link EventHubProducerAsyncClient}.  The {@code fullyQualifiedNamespace} is the Event Hubs Namespace's host name.
+ * It is listed under the "Essentials" panel after navigating to the Event Hubs Namespace via Azure Portal. The
+ * credential used is {@code DefaultAzureCredential} because it combines commonly used credentials in deployment and
+ * development and chooses the credential to used based on its running environment.</p>
  *
- * {@codesnippet com.azure.messaging.eventhubs.eventhubconsumerclient.instantiation}
+ * <!-- src_embed com.azure.messaging.eventhubs.eventhubproducerasyncclient.construct -->
+ * <pre>
+ * TokenCredential credential = new DefaultAzureCredentialBuilder&#40;&#41;.build&#40;&#41;;
  *
- * <p><strong>Creating producers and consumers that share the same connection</strong></p>
+ * &#47;&#47; &quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot; will look similar to &quot;&#123;your-namespace&#125;.servicebus.windows.net&quot;
+ * &#47;&#47; &quot;&lt;&lt;event-hub-name&gt;&gt;&quot; will be the name of the Event Hub instance you created inside the Event Hubs namespace.
+ * EventHubProducerAsyncClient producer = new EventHubClientBuilder&#40;&#41;
+ *     .credential&#40;&quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot;, &quot;&lt;&lt;event-hub-name&gt;&gt;&quot;,
+ *         credential&#41;
+ *     .buildAsyncProducerClient&#40;&#41;;
+ * </pre>
+ * <!-- end com.azure.messaging.eventhubs.eventhubproducerasyncclient.construct -->
+ *
+ * <p><strong>Sample: Construct a {@link EventHubConsumerAsyncClient}</strong></p>
+ *
+ * <p>The following code sample demonstrates the creation of the asynchronous client
+ * {@link EventHubConsumerAsyncClient}.  The {@code fullyQualifiedNamespace} is the Event Hubs Namespace's host name.
+ * It is listed under the "Essentials" panel after navigating to the Event Hubs Namespace via Azure Portal. The
+ * {@code consumerGroup} is found by navigating to the Event Hub instance, and selecting "Consumer groups" under the
+ * "Entities" panel.  The {@link #consumerGroup(String)} is required for creating consumer clients.  The credential
+ * used is {@code DefaultAzureCredential} because it combines commonly used credentials in deployment and development
+ * and chooses the credential to used based on its running environment.</p>
+ *
+ * <!-- src_embed com.azure.messaging.eventhubs.eventhubconsumerasyncclient.construct -->
+ * <pre>
+ * TokenCredential credential = new DefaultAzureCredentialBuilder&#40;&#41;.build&#40;&#41;;
+ *
+ * &#47;&#47; &quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot; will look similar to &quot;&#123;your-namespace&#125;.servicebus.windows.net&quot;
+ * &#47;&#47; &quot;&lt;&lt;event-hub-name&gt;&gt;&quot; will be the name of the Event Hub instance you created inside the Event Hubs namespace.
+ * EventHubConsumerAsyncClient consumer = new EventHubClientBuilder&#40;&#41;
+ *     .credential&#40;&quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot;, &quot;&lt;&lt;event-hub-name&gt;&gt;&quot;,
+ *         credential&#41;
+ *     .consumerGroup&#40;EventHubClientBuilder.DEFAULT_CONSUMER_GROUP_NAME&#41;
+ *     .buildAsyncConsumerClient&#40;&#41;;
+ * </pre>
+ * <!-- end com.azure.messaging.eventhubs.eventhubconsumerasyncclient.construct -->
+ *
+ * <p><strong>Sample: Creating a client using web sockets and custom retry options</strong></p>
+ *
+ * <p>By default, the AMQP port 5671 is used, but clients can use web sockets, port 443.  Customers can replace the
+ * {@link AmqpRetryOptions#AmqpRetryOptions() default retry options} with their own policy.
+ * The retry options are used when recovering from transient failures in the underlying AMQP connection and performing
+ * any operations that require a response from the service.</p>
+ *
+ * <!-- src_embed com.azure.messaging.eventhubs.eventhubproducerclient.websockets.construct -->
+ * <pre>
+ * TokenCredential credential = new DefaultAzureCredentialBuilder&#40;&#41;.build&#40;&#41;;
+ *
+ * AmqpRetryOptions customRetryOptions = new AmqpRetryOptions&#40;&#41;
+ *     .setMaxRetries&#40;5&#41;
+ *     .setMode&#40;AmqpRetryMode.FIXED&#41;
+ *     .setTryTimeout&#40;Duration.ofSeconds&#40;60&#41;&#41;;
+ *
+ * &#47;&#47; &quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot; will look similar to &quot;&#123;your-namespace&#125;.servicebus.windows.net&quot;
+ * &#47;&#47; &quot;&lt;&lt;event-hub-name&gt;&gt;&quot; will be the name of the Event Hub instance you created inside the Event Hubs namespace.
+ * EventHubProducerClient producer = new EventHubClientBuilder&#40;&#41;
+ *     .credential&#40;&quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot;, &quot;&lt;&lt;event-hub-name&gt;&gt;&quot;,
+ *         credential&#41;
+ *     .transportType&#40;AmqpTransportType.AMQP_WEB_SOCKETS&#41;
+ *     .buildProducerClient&#40;&#41;;
+ * </pre>
+ * <!-- end com.azure.messaging.eventhubs.eventhubproducerclient.websockets.construct -->
+ *
+ * <p><strong>Sample: Creating producers and consumers that share the same connection</strong></p>
+ *
  * <p>By default, a dedicated connection is created for each producer and consumer created from the builder. If users
- * wish to use the same underlying connection, they can toggle {@link #shareConnection() shareConnection()}.</p>
+ * wish to use the same underlying connection, they can toggle {@link #shareConnection()}.  This underlying connection
+ * is closed when all clients created from this builder instance are disposed.</p>
  *
- * {@codesnippet com.azure.messaging.eventhubs.eventhubclientbuilder.instantiation}
+ * <!-- src_embed com.azure.messaging.eventhubs.eventhubclientbuilder.shareconnection.construct -->
+ * <pre>
+ * TokenCredential credential = new DefaultAzureCredentialBuilder&#40;&#41;.build&#40;&#41;;
+ *
+ * &#47;&#47; &quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot; will look similar to &quot;&#123;your-namespace&#125;.servicebus.windows.net&quot;
+ * &#47;&#47; &quot;&lt;&lt;event-hub-name&gt;&gt;&quot; will be the name of the Event Hub instance you created inside the Event Hubs namespace.
+ * EventHubClientBuilder builder = new EventHubClientBuilder&#40;&#41;
+ *     .credential&#40;&quot;&lt;&lt;fully-qualified-namespace&gt;&gt;&quot;, &quot;&lt;&lt;event-hub-name&gt;&gt;&quot;,
+ *         credential&#41;
+ *     .shareConnection&#40;&#41;;
+ *
+ * &#47;&#47; Both the producer and consumer created share the same underlying connection.
+ * EventHubProducerAsyncClient producer = builder.buildAsyncProducerClient&#40;&#41;;
+ * EventHubConsumerAsyncClient consumer = builder
+ *     .consumerGroup&#40;&quot;my-consumer-group&quot;&#41;
+ *     .buildAsyncConsumerClient&#40;&#41;;
+ * </pre>
+ * <!-- end com.azure.messaging.eventhubs.eventhubclientbuilder.shareconnection.construct -->
  *
  * @see EventHubProducerAsyncClient
  * @see EventHubProducerClient
  * @see EventHubConsumerAsyncClient
  * @see EventHubConsumerClient
  */
-@ServiceClientBuilder(serviceClients = {EventHubProducerAsyncClient.class, EventHubProducerClient.class,
-    EventHubConsumerAsyncClient.class, EventHubConsumerClient.class}, protocol = ServiceClientProtocol.AMQP)
-public class EventHubClientBuilder {
+@ServiceClientBuilder(
+    serviceClients = {
+        EventHubProducerAsyncClient.class,
+        EventHubProducerClient.class,
+        EventHubConsumerAsyncClient.class,
+        EventHubConsumerClient.class },
+    protocol = ServiceClientProtocol.AMQP)
+public class EventHubClientBuilder
+    implements TokenCredentialTrait<EventHubClientBuilder>, AzureNamedKeyCredentialTrait<EventHubClientBuilder>,
+    ConnectionStringTrait<EventHubClientBuilder>, AzureSasCredentialTrait<EventHubClientBuilder>,
+    AmqpTrait<EventHubClientBuilder>, ConfigurationTrait<EventHubClientBuilder> {
 
     // Default number of events to fetch when creating the consumer.
     static final int DEFAULT_PREFETCH_COUNT = 500;
@@ -108,6 +221,9 @@ public class EventHubClientBuilder {
     // Default number of events to fetch for a sync client. The sync client operates in "pull" mode.
     // So, limit the prefetch to just 1 by default.
     static final int DEFAULT_PREFETCH_COUNT_FOR_SYNC_CLIENT = 1;
+
+    static final AmqpRetryOptions DEFAULT_RETRY
+        = new AmqpRetryOptions().setTryTimeout(ClientConstants.OPERATION_TIMEOUT);
 
     /**
      * The name of the default consumer group in the Event Hubs service.
@@ -125,14 +241,14 @@ public class EventHubClientBuilder {
     private static final String EVENTHUBS_PROPERTIES_FILE = "azure-messaging-eventhubs.properties";
     private static final String NAME_KEY = "name";
     private static final String VERSION_KEY = "version";
+
+    private static final String LIBRARY_NAME;
+    private static final String LIBRARY_VERSION;
     private static final String UNKNOWN = "UNKNOWN";
 
     private static final String AZURE_EVENT_HUBS_CONNECTION_STRING = "AZURE_EVENT_HUBS_CONNECTION_STRING";
-    private static final AmqpRetryOptions DEFAULT_RETRY = new AmqpRetryOptions()
-        .setTryTimeout(ClientConstants.OPERATION_TIMEOUT);
-    private static final Pattern HOST_PORT_PATTERN = Pattern.compile("^[^:]+:\\d+");
 
-    private final ClientLogger logger = new ClientLogger(EventHubClientBuilder.class);
+    private static final ClientLogger LOGGER = new ClientLogger(EventHubClientBuilder.class);
     private final Object connectionLock = new Object();
     private final AtomicBoolean isSharedConnection = new AtomicBoolean();
     private TokenCredential credentials;
@@ -144,16 +260,25 @@ public class EventHubClientBuilder {
     private String fullyQualifiedNamespace;
     private String eventHubName;
     private String consumerGroup;
-    private EventHubConnectionProcessor eventHubConnectionProcessor;
+    private ConnectionCacheWrapper eventHubConnectionProcessor;
     private Integer prefetchCount;
     private ClientOptions clientOptions;
     private SslDomain.VerifyMode verifyMode;
-    private URL customEndpointAddress;
+
+    private URI customEndpointAddress;
+    private ConnectionStringProperties connectionStringProperties;
+
+    static {
+        final Map<String, String> properties = CoreUtils.getProperties(EVENTHUBS_PROPERTIES_FILE);
+        LIBRARY_NAME = properties.getOrDefault(NAME_KEY, UNKNOWN);
+        LIBRARY_VERSION = properties.getOrDefault(VERSION_KEY, UNKNOWN);
+    }
 
     /**
      * Keeps track of the open clients that were created from this builder when there is a shared connection.
      */
     private final AtomicInteger openClients = new AtomicInteger();
+    private final V2StackSupport v2StackSupport = new V2StackSupport(LOGGER);
 
     /**
      * Creates a new instance with the default transport {@link AmqpTransportType#AMQP} and a non-shared connection. A
@@ -165,34 +290,12 @@ public class EventHubClientBuilder {
     }
 
     /**
-     * Sets the credential information given a connection string to the Event Hub instance.
+     * Creates a TokenCredential from the {@link ConnectionStringProperties}.
      *
-     * <p>
-     * If the connection string is copied from the Event Hubs namespace, it will likely not contain the name to the
-     * desired Event Hub, which is needed. In this case, the name can be added manually by adding {@literal
-     * "EntityPath=EVENT_HUB_NAME"} to the end of the connection string. For example, "EntityPath=telemetry-hub".
-     * </p>
+     * @param properties Connection string components to create TokenCredential from.
      *
-     * <p>
-     * If you have defined a shared access policy directly on the Event Hub itself, then copying the connection string
-     * from that Event Hub will result in a connection string that contains the name.
-     * </p>
-     *
-     * @param connectionString The connection string to use for connecting to the Event Hub instance. It is expected
-     *     that the Event Hub name and the shared access key properties are contained in this connection string.
-     *
-     * @return The updated {@link EventHubClientBuilder} object.
-     * @throws IllegalArgumentException if {@code connectionString} is null or empty. Or, the {@code
-     *     connectionString} does not contain the "EntityPath" key, which is the name of the Event Hub instance.
-     * @throws AzureException If the shared access signature token credential could not be created using the
-     *     connection string.
+     * @return A {@link TokenCredential} represented by the connection string properties.
      */
-    public EventHubClientBuilder connectionString(String connectionString) {
-        ConnectionStringProperties properties = new ConnectionStringProperties(connectionString);
-        TokenCredential tokenCredential = getTokenCredential(properties);
-        return credential(properties.getEndpoint().getHost(), properties.getEntityPath(), tokenCredential);
-    }
-
     private TokenCredential getTokenCredential(ConnectionStringProperties properties) {
         TokenCredential tokenCredential;
         if (properties.getSharedAccessSignature() == null) {
@@ -210,8 +313,60 @@ public class EventHubClientBuilder {
      * @param clientOptions The client options.
      * @return The updated {@link EventHubClientBuilder} object.
      */
+    @Override
     public EventHubClientBuilder clientOptions(ClientOptions clientOptions) {
         this.clientOptions = clientOptions;
+        return this;
+    }
+
+    /***
+     * Gets the client options.
+     */
+    ClientOptions getClientOptions() {
+        return clientOptions;
+    }
+
+    /**
+     * Sets the credential information given a connection string to the Event Hub instance or the Event Hubs namespace.
+     *
+     * <p>
+     * If the connection string is copied from the Event Hubs namespace, it will likely not contain the name to the
+     * desired Event Hub, which is needed. In this case, the name can be added manually by adding {@literal
+     * "EntityPath=EVENT_HUB_NAME"} to the end of the connection string. For example, "EntityPath=telemetry-hub".
+     * </p>
+     *
+     * <p>
+     * If you have defined a shared access policy directly on the Event Hub itself, then copying the connection string
+     * from that Event Hub will result in a connection string that contains the name.
+     * </p>
+     *
+     * @param connectionString The connection string to use for connecting to the Event Hub instance or Event Hubs
+     *     instance. It is expected that the Event Hub name and the shared access key properties are contained in this
+     *     connection string.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws IllegalArgumentException if {@code connectionString} is null or empty. If {@code fullyQualifiedNamespace}
+     *     in the connection string is null.
+     * @throws NullPointerException if a credential could not be extracted
+     * @throws AzureException If the shared access signature token credential could not be created using the
+     *     connection string.
+     */
+    @Override
+    public EventHubClientBuilder connectionString(String connectionString) {
+        this.connectionStringProperties = new ConnectionStringProperties(connectionString);
+
+        this.fullyQualifiedNamespace = Objects.requireNonNull(connectionStringProperties.getEndpoint().getHost(),
+            "'fullyQualifiedNamespace' cannot be null.");
+        this.credentials = getTokenCredential(connectionStringProperties);
+
+        if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
+        }
+
+        if (!CoreUtils.isNullOrEmpty(connectionStringProperties.getEntityPath())) {
+            this.eventHubName = connectionStringProperties.getEntityPath();
+        }
+
         return this;
     }
 
@@ -236,40 +391,48 @@ public class EventHubClientBuilder {
         Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (connectionString.isEmpty()) {
-            throw logger.logExceptionAsError(new IllegalArgumentException(
-                "'connectionString' cannot be an empty string."));
+            throw LOGGER
+                .logExceptionAsError(new IllegalArgumentException("'connectionString' cannot be an empty string."));
         } else if (eventHubName.isEmpty()) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
 
-        final ConnectionStringProperties properties = new ConnectionStringProperties(connectionString);
-        TokenCredential tokenCredential = getTokenCredential(properties);
+        this.connectionStringProperties = new ConnectionStringProperties(connectionString);
+        TokenCredential tokenCredential = getTokenCredential(connectionStringProperties);
 
-        if (!CoreUtils.isNullOrEmpty(properties.getEntityPath())
-            && !eventHubName.equals(properties.getEntityPath())) {
-            throw logger.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
+        if (!CoreUtils.isNullOrEmpty(connectionStringProperties.getEntityPath())
+            && !eventHubName.equals(connectionStringProperties.getEntityPath())) {
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
                 "'connectionString' contains an Event Hub name [%s] and it does not match the given "
                     + "'eventHubName' parameter [%s]. Please use the credentials(String connectionString) overload. "
                     + "Or supply a 'connectionString' without 'EntityPath' in it.",
-                properties.getEntityPath(), eventHubName)));
+                connectionStringProperties.getEntityPath(), eventHubName)));
         }
 
-        return credential(properties.getEndpoint().getHost(), eventHubName, tokenCredential);
+        return credential(connectionStringProperties.getEndpoint().getHost(), eventHubName, tokenCredential);
     }
 
     /**
      * Sets the configuration store that is used during construction of the service client.
-     *
+     * <p>
      * If not specified, the default configuration store is used to configure the {@link EventHubAsyncClient}. Use
      * {@link Configuration#NONE} to bypass using configuration settings during construction.
-     *
+     * </p>
      * @param configuration The configuration store used to configure the {@link EventHubAsyncClient}.
      *
      * @return The updated {@link EventHubClientBuilder} object.
      */
+    @Override
     public EventHubClientBuilder configuration(Configuration configuration) {
         this.configuration = configuration;
         return this;
+    }
+
+    /**
+     * Gets the configuration to use.
+     */
+    Configuration getConfiguration() {
+        return configuration;
     }
 
     /**
@@ -291,13 +454,72 @@ public class EventHubClientBuilder {
         }
 
         try {
-            this.customEndpointAddress = new URL(customEndpointAddress);
-        } catch (MalformedURLException e) {
-            throw logger.logExceptionAsError(
-                new IllegalArgumentException(customEndpointAddress + " : is not a valid URL.", e));
+            this.customEndpointAddress = new URI(customEndpointAddress);
+        } catch (URISyntaxException e) {
+            throw LOGGER
+                .logExceptionAsError(new IllegalArgumentException(customEndpointAddress + " : is not a valid URL.", e));
         }
 
         return this;
+    }
+
+    /**
+     * Gets the custom endpoint address.
+     */
+    URI getCustomEndpointAddress() {
+        return this.customEndpointAddress;
+    }
+
+    /**
+     * Sets the fully qualified name for the Event Hubs namespace.
+     *
+     * @param fullyQualifiedNamespace The fully qualified name for the Event Hubs namespace. This is likely to be
+     *     similar to <strong>{@literal "{your-namespace}.servicebus.windows.net}"</strong>.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws IllegalArgumentException if {@code fullyQualifiedNamespace} is an empty string.
+     * @throws NullPointerException if {@code fullyQualifiedNamespace} is null.
+     */
+    public EventHubClientBuilder fullyQualifiedNamespace(String fullyQualifiedNamespace) {
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
+        if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
+            throw LOGGER.logExceptionAsError(
+                new IllegalArgumentException("'fullyQualifiedNamespace' cannot be an empty string."));
+        }
+        return this;
+    }
+
+    /**
+     * Gets the fully qualified namespace.
+     */
+    String getFullyQualifiedNamespace() {
+        return fullyQualifiedNamespace;
+    }
+
+    /**
+     * Sets the name of the Event Hub to connect the client to.
+     *
+     * @param eventHubName The name of the Event Hub to connect the client to.
+    
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws IllegalArgumentException if {@code eventHubName} is an empty string.
+     * @throws NullPointerException if {@code eventHubName} is null.
+     */
+    public EventHubClientBuilder eventHubName(String eventHubName) {
+        this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
+
+        if (CoreUtils.isNullOrEmpty(eventHubName)) {
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+        }
+        return this;
+    }
+
+    /**
+     * Gets the Event Hub name.
+     */
+    String getEventHubName() {
+        return eventHubName;
     }
 
     /**
@@ -328,17 +550,34 @@ public class EventHubClientBuilder {
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
         TokenCredential credential) {
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.credentials = Objects.requireNonNull(credential, "'credential' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
         } else if (CoreUtils.isNullOrEmpty(eventHubName)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
 
+        return this;
+    }
+
+    /**
+     * Sets the {@link TokenCredential} used to authorize requests sent to the service. Refer to the Azure SDK for Java
+     * <a href="https://aka.ms/azsdk/java/docs/identity">identity and authentication</a>
+     * documentation for more details on proper usage of the {@link TokenCredential} type.
+     *
+     * @param credential The token credential to use for authorization. Access controls may be specified by the
+     *     Event Hubs namespace or the requested Event Hub, depending on Azure configuration.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws NullPointerException if {@code credentials} is null.
+     */
+    @Override
+    public EventHubClientBuilder credential(TokenCredential credential) {
+        this.credentials = Objects.requireNonNull(credential, "'credential' cannot be null.");
         return this;
     }
 
@@ -359,22 +598,40 @@ public class EventHubClientBuilder {
      *     null.
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
-                                            AzureNamedKeyCredential credential) {
+        AzureNamedKeyCredential credential) {
 
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
         } else if (CoreUtils.isNullOrEmpty(eventHubName)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
 
         Objects.requireNonNull(credential, "'credential' cannot be null.");
         this.credentials = new EventHubSharedKeyCredential(credential.getAzureNamedKey().getName(),
             credential.getAzureNamedKey().getKey(), ClientConstants.TOKEN_VALIDITY);
 
+        return this;
+    }
+
+    /**
+     * Sets the credential information for which Event Hub instance to connect to, and how to authorize against it.
+     *
+     * @param credential The shared access name and key credential to use for authorization.
+     *     Access controls may be specified by the Event Hubs namespace or the requested Event Hub,
+     *     depending on Azure configuration.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws NullPointerException if {@code credentials} is null.
+     */
+    @Override
+    public EventHubClientBuilder credential(AzureNamedKeyCredential credential) {
+        Objects.requireNonNull(credential, "'credential' cannot be null.");
+        this.credentials = new EventHubSharedKeyCredential(credential.getAzureNamedKey().getName(),
+            credential.getAzureNamedKey().getKey(), ClientConstants.TOKEN_VALIDITY);
         return this;
     }
 
@@ -395,22 +652,46 @@ public class EventHubClientBuilder {
      *     null.
      */
     public EventHubClientBuilder credential(String fullyQualifiedNamespace, String eventHubName,
-                                            AzureSasCredential credential) {
+        AzureSasCredential credential) {
 
-        this.fullyQualifiedNamespace = Objects.requireNonNull(fullyQualifiedNamespace,
-            "'fullyQualifiedNamespace' cannot be null.");
+        this.fullyQualifiedNamespace
+            = Objects.requireNonNull(fullyQualifiedNamespace, "'fullyQualifiedNamespace' cannot be null.");
         this.eventHubName = Objects.requireNonNull(eventHubName, "'eventHubName' cannot be null.");
 
         if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'host' cannot be an empty string."));
         } else if (CoreUtils.isNullOrEmpty(eventHubName)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
         }
 
         Objects.requireNonNull(credential, "'credential' cannot be null.");
         this.credentials = new EventHubSharedKeyCredential(credential.getSignature());
 
         return this;
+    }
+
+    /**
+     * Sets the credential information for which Event Hub instance to connect to, and how to authorize against it.
+     *
+     * @param credential The shared access signature credential to use for authorization.
+     *     Access controls may be specified by the Event Hubs namespace or the requested Event Hub,
+     *     depending on Azure configuration.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @throws NullPointerException if {@code credentials} is null.
+     */
+    @Override
+    public EventHubClientBuilder credential(AzureSasCredential credential) {
+        Objects.requireNonNull(credential, "'credential' cannot be null.");
+        this.credentials = new EventHubSharedKeyCredential(credential.getSignature());
+        return this;
+    }
+
+    /**
+     * Gets the credentials.
+     */
+    TokenCredential getCredentials() {
+        return credentials;
     }
 
     /**
@@ -421,9 +702,17 @@ public class EventHubClientBuilder {
      *
      * @return The updated {@link EventHubClientBuilder} object.
      */
+    @Override
     public EventHubClientBuilder proxyOptions(ProxyOptions proxyOptions) {
         this.proxyOptions = proxyOptions;
         return this;
+    }
+
+    /**
+     * Gets proxy options.
+     */
+    ProxyOptions getProxyOptions() {
+        return proxyOptions;
     }
 
     /**
@@ -434,8 +723,32 @@ public class EventHubClientBuilder {
      *
      * @return The updated {@link EventHubClientBuilder} object.
      */
+    @Override
     public EventHubClientBuilder transportType(AmqpTransportType transport) {
         this.transport = transport;
+        return this;
+    }
+
+    /**
+     * Gets the transport type.
+     *
+     * @return The transport type.
+     */
+    AmqpTransportType getTransportType() {
+        return transport;
+    }
+
+    /**
+     * Sets the retry policy for {@link EventHubAsyncClient}. If not specified, the default retry options are used.
+     *
+     * @param retryOptions The retry policy to use.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     * @deprecated Replaced by {@link #retryOptions(AmqpRetryOptions)}.
+     */
+    @Deprecated
+    public EventHubClientBuilder retry(AmqpRetryOptions retryOptions) {
+        this.retryOptions = retryOptions;
         return this;
     }
 
@@ -446,9 +759,17 @@ public class EventHubClientBuilder {
      *
      * @return The updated {@link EventHubClientBuilder} object.
      */
-    public EventHubClientBuilder retry(AmqpRetryOptions retryOptions) {
+    @Override
+    public EventHubClientBuilder retryOptions(AmqpRetryOptions retryOptions) {
         this.retryOptions = retryOptions;
         return this;
+    }
+
+    /**
+     * Gets the retry options.
+     */
+    AmqpRetryOptions getRetryOptions() {
+        return retryOptions;
     }
 
     /**
@@ -468,10 +789,17 @@ public class EventHubClientBuilder {
     }
 
     /**
-     * Sets the count used by the receiver to control the number of events the Event Hub consumer will actively receive
+     * Gets the consumer group.
+     */
+    String getConsumerGroup() {
+        return consumerGroup;
+    }
+
+    /**
+     * Sets the count used by the receiver to control the number of events per partition the Event Hub consumer will actively receive
      * and queue locally without regard to whether a receive operation is currently active.
      *
-     * @param prefetchCount The amount of events to queue locally.
+     * @param prefetchCount The amount of events per partition to queue locally. Defaults to 500 events per partition.
      *
      * @return The updated {@link EventHubClientBuilder} object.
      * @throws IllegalArgumentException if {@code prefetchCount} is less than {@link #MINIMUM_PREFETCH_COUNT 1} or
@@ -479,12 +807,12 @@ public class EventHubClientBuilder {
      */
     public EventHubClientBuilder prefetchCount(int prefetchCount) {
         if (prefetchCount < MINIMUM_PREFETCH_COUNT) {
-            throw logger.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
                 "PrefetchCount, '%s' has to be above %s", prefetchCount, MINIMUM_PREFETCH_COUNT)));
         }
 
         if (prefetchCount > MAXIMUM_PREFETCH_COUNT) {
-            throw logger.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException(String.format(Locale.US,
                 "PrefetchCount, '%s', has to be below %s", prefetchCount, MAXIMUM_PREFETCH_COUNT)));
         }
 
@@ -493,7 +821,7 @@ public class EventHubClientBuilder {
     }
 
     /**
-     * Package-private method that gets the prefetch count.
+     * Gets the prefetch count.
      *
      * @return Gets the prefetch count or {@code null} if it has not been set.
      * @see #DEFAULT_PREFETCH_COUNT for default prefetch count.
@@ -503,7 +831,28 @@ public class EventHubClientBuilder {
     }
 
     /**
-     * Package-private method that sets the scheduler for the created Event Hub client.
+     * Gets the connection string properties.
+     *
+     * @return the connection string properties.
+     */
+    ConnectionStringProperties getConnectionStringProperties() {
+        return connectionStringProperties;
+    }
+
+    /**
+     * Sets the connection string properties.
+     *
+     * @param connectionStringProperties the connection string properties to set.
+     *
+     * @return The updated {@link EventHubClientBuilder} object.
+     */
+    EventHubClientBuilder setConnectionStringProperties(ConnectionStringProperties connectionStringProperties) {
+        this.connectionStringProperties = connectionStringProperties;
+        return this;
+    }
+
+    /**
+     * Sets the scheduler for the created Event Hub client.
      *
      * @param scheduler Scheduler to set.
      *
@@ -515,7 +864,16 @@ public class EventHubClientBuilder {
     }
 
     /**
-     * Package-private method that sets the verify mode for this connection.
+     * Gets the scheduler used to subscribe Event Hub operations on.
+     *
+     * @return The scheduler.
+     */
+    Scheduler getScheduler() {
+        return this.scheduler;
+    }
+
+    /**
+     * Sets the verify mode for this connection.
      *
      * @param verifyMode The verification mode.
      * @return The updated {@link EventHubClientBuilder} object.
@@ -526,6 +884,13 @@ public class EventHubClientBuilder {
     }
 
     /**
+     * Gets the verify mode.
+     */
+    SslDomain.VerifyMode getVerifyMode() {
+        return verifyMode;
+    }
+
+    /**
      * Creates a new {@link EventHubConsumerAsyncClient} based on the options set on this builder. Every time {@code
      * buildAsyncConsumer()} is invoked, a new instance of {@link EventHubConsumerAsyncClient} is created.
      *
@@ -533,15 +898,15 @@ public class EventHubClientBuilder {
      * @throws IllegalArgumentException If shared connection is not used and the credentials have not been set using
      *     either {@link #connectionString(String)} or {@link #credential(String, String, TokenCredential)}. Also, if
      *     {@link #consumerGroup(String)} have not been set. And if a proxy is specified but the transport type is not
-     *     {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.
+     *     {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.  Or, if the {@code eventHubName} has not been set.
      */
     public EventHubConsumerAsyncClient buildAsyncConsumerClient() {
         if (CoreUtils.isNullOrEmpty(consumerGroup)) {
-            throw logger.logExceptionAsError(new IllegalArgumentException("'consumerGroup' cannot be null or an empty "
+            throw LOGGER.logExceptionAsError(new IllegalArgumentException("'consumerGroup' cannot be null or an empty "
                 + "string. using EventHubClientBuilder.consumerGroup(String)"));
         }
 
-        return buildAsyncClient().createConsumer(consumerGroup, prefetchCount);
+        return buildAsyncClient().createConsumer(consumerGroup, prefetchCount, false);
     }
 
     /**
@@ -552,7 +917,7 @@ public class EventHubClientBuilder {
      * @throws IllegalArgumentException If shared connection is not used and the credentials have not been set using
      *     either {@link #connectionString(String)} or {@link #credential(String, String, TokenCredential)}. Also, if
      *     {@link #consumerGroup(String)} have not been set. And if a proxy is specified but the transport type is not
-     *     {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.
+     *     {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.  Or, if the {@code eventHubName} has not been set.
      */
     public EventHubConsumerClient buildConsumerClient() {
         return buildClient().createConsumer(consumerGroup, prefetchCount);
@@ -566,6 +931,7 @@ public class EventHubClientBuilder {
      * @throws IllegalArgumentException If shared connection is not used and the credentials have not been set using
      *     either {@link #connectionString(String)} or {@link #credential(String, String, TokenCredential)}. Or, if a
      *     proxy is specified but the transport type is not {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.
+     *     Or, if the {@code eventHubName} has not been set.
      */
     public EventHubProducerAsyncClient buildAsyncProducerClient() {
         return buildAsyncClient().createProducer();
@@ -579,6 +945,7 @@ public class EventHubClientBuilder {
      * @throws IllegalArgumentException If shared connection is not used and the credentials have not been set using
      *     either {@link #connectionString(String)} or {@link #credential(String, String, TokenCredential)}. Or, if a
      *     proxy is specified but the transport type is not {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.
+     *     Or, if the {@code eventHubName} has not been set.
      */
     public EventHubProducerClient buildProducerClient() {
         return buildClient().createProducer();
@@ -605,7 +972,8 @@ public class EventHubClientBuilder {
      * @return A new {@link EventHubAsyncClient} instance with all the configured options.
      * @throws IllegalArgumentException if the credentials have not been set using either {@link
      *     #connectionString(String)} or {@link #credential(String, String, TokenCredential)}. Or, if a proxy is
-     *     specified but the transport type is not {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}.
+     *     specified but the transport type is not {@link AmqpTransportType#AMQP_WEB_SOCKETS web sockets}. Or, if the
+     *     {@code eventHubName} has not been set.
      */
     EventHubAsyncClient buildAsyncClient() {
         if (retryOptions == null) {
@@ -620,28 +988,51 @@ public class EventHubClientBuilder {
             prefetchCount = DEFAULT_PREFETCH_COUNT;
         }
 
+        final Meter meter = createMeter();
         final MessageSerializer messageSerializer = new EventHubMessageSerializer();
 
-        final EventHubConnectionProcessor processor;
+        final ConnectionCacheWrapper processor;
         if (isSharedConnection.get()) {
             synchronized (connectionLock) {
                 if (eventHubConnectionProcessor == null) {
-                    eventHubConnectionProcessor = buildConnectionProcessor(messageSerializer);
+                    if (v2StackSupport.isV2StackEnabled(configuration)) {
+                        final boolean useSessionChannelCache
+                            = v2StackSupport.isSessionChannelCacheEnabled(configuration);
+                        eventHubConnectionProcessor = new ConnectionCacheWrapper(
+                            buildConnectionCache(messageSerializer, meter, useSessionChannelCache));
+                    } else {
+                        eventHubConnectionProcessor
+                            = new ConnectionCacheWrapper(buildConnectionProcessor(messageSerializer, meter));
+                    }
                 }
             }
 
             processor = eventHubConnectionProcessor;
 
             final int numberOfOpenClients = openClients.incrementAndGet();
-            logger.info("# of open clients with shared connection: {}", numberOfOpenClients);
+            LOGGER.info("# of open clients with shared connection: {}", numberOfOpenClients);
         } else {
-            processor = buildConnectionProcessor(messageSerializer);
+            if (v2StackSupport.isV2StackEnabled(configuration)) {
+                final boolean useSessionChannelCache = v2StackSupport.isSessionChannelCacheEnabled(configuration);
+                processor = new ConnectionCacheWrapper(
+                    buildConnectionCache(messageSerializer, meter, useSessionChannelCache));
+            } else {
+                processor = new ConnectionCacheWrapper(buildConnectionProcessor(messageSerializer, meter));
+            }
         }
 
-        final TracerProvider tracerProvider = new TracerProvider(ServiceLoader.load(Tracer.class));
+        String identifier;
+        if (clientOptions instanceof AmqpClientOptions) {
+            String clientOptionIdentifier = ((AmqpClientOptions) clientOptions).getIdentifier();
+            identifier = CoreUtils.isNullOrEmpty(clientOptionIdentifier)
+                ? UUID.randomUUID().toString()
+                : clientOptionIdentifier;
+        } else {
+            identifier = UUID.randomUUID().toString();
+        }
 
-        return new EventHubAsyncClient(processor, tracerProvider, messageSerializer, scheduler,
-            isSharedConnection.get(), this::onClientClose);
+        return new EventHubAsyncClient(processor, messageSerializer, scheduler, isSharedConnection.get(),
+            this::onClientClose, identifier, meter, createTracer());
     }
 
     /**
@@ -660,7 +1051,7 @@ public class EventHubClientBuilder {
      * <li>If no proxy is specified, the builder checks the {@link Configuration#getGlobalConfiguration() global
      * configuration} for a configured proxy, then it checks to see if a system proxy is configured.</li>
      * <li>If no timeout is specified, a {@link ClientConstants#OPERATION_TIMEOUT timeout of one minute} is used.</li>
-     * <li>If no scheduler is specified, an {@link Schedulers#elastic() elastic scheduler} is used.</li>
+     * <li>If no scheduler is specified, an {@link Schedulers#boundedElastic() elastic scheduler} is used.</li>
      * </ul>
      *
      * @return A new {@link EventHubClient} instance with all the configured options.
@@ -681,70 +1072,104 @@ public class EventHubClientBuilder {
     void onClientClose() {
         synchronized (connectionLock) {
             final int numberOfOpenClients = openClients.decrementAndGet();
-            logger.info("Closing a dependent client. # of open clients: {}", numberOfOpenClients);
+            LOGGER.info("Closing a dependent client. # of open clients: {}", numberOfOpenClients);
 
             if (numberOfOpenClients > 0) {
                 return;
             }
 
             if (numberOfOpenClients < 0) {
-                logger.warning("There should not be less than 0 clients. actual: {}", numberOfOpenClients);
+                LOGGER.warning("There should not be less than 0 clients. actual: {}", numberOfOpenClients);
             }
 
-            logger.info("No more open clients, closing shared connection.");
+            LOGGER.info("No more open clients, closing shared connection.");
             if (eventHubConnectionProcessor != null) {
                 eventHubConnectionProcessor.dispose();
                 eventHubConnectionProcessor = null;
             } else {
-                logger.warning("Shared EventHubConnectionProcessor was already disposed.");
+                LOGGER.warning("Shared EventHubConnectionProcessor was already disposed.");
             }
         }
     }
 
-    private EventHubConnectionProcessor buildConnectionProcessor(MessageSerializer messageSerializer) {
+    Tracer createTracer() {
+        return TracerProvider.getDefaultProvider()
+            .createTracer(LIBRARY_NAME, LIBRARY_VERSION, AZ_NAMESPACE_VALUE,
+                clientOptions == null ? null : clientOptions.getTracingOptions());
+    }
+
+    Meter createMeter() {
+        return MeterProvider.getDefaultProvider()
+            .createMeter(LIBRARY_NAME, LIBRARY_VERSION,
+                clientOptions == null ? null : clientOptions.getMetricsOptions());
+    }
+
+    private EventHubConnectionProcessor buildConnectionProcessor(MessageSerializer messageSerializer, Meter meter) {
         final ConnectionOptions connectionOptions = getConnectionOptions();
+        final Supplier<String> getEventHubName = () -> {
+            if (CoreUtils.isNullOrEmpty(eventHubName)) {
+                throw LOGGER
+                    .logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            }
+            return eventHubName;
+        };
+
         final Flux<EventHubAmqpConnection> connectionFlux = Flux.create(sink -> {
             sink.onRequest(request -> {
 
                 if (request == 0) {
                     return;
                 } else if (request > 1) {
-                    sink.error(logger.logExceptionAsWarning(new IllegalArgumentException(
+                    sink.error(LOGGER.logExceptionAsWarning(new IllegalArgumentException(
                         "Requested more than one connection. Only emitting one. Request: " + request)));
                     return;
                 }
 
                 final String connectionId = StringUtil.getRandomString("MF");
-                logger.info("connectionId[{}]: Emitting a single connection.", connectionId);
+                LOGGER.atInfo().addKeyValue(CONNECTION_ID_KEY, connectionId).log("Emitting a single connection.");
 
-                final TokenManagerProvider tokenManagerProvider = new AzureTokenManagerProvider(
-                    connectionOptions.getAuthorizationType(), connectionOptions.getFullyQualifiedNamespace(),
-                    connectionOptions.getAuthorizationScope());
+                final TokenManagerProvider tokenManagerProvider
+                    = new AzureTokenManagerProvider(connectionOptions.getAuthorizationType(),
+                        connectionOptions.getFullyQualifiedNamespace(), connectionOptions.getAuthorizationScope());
                 final ReactorProvider provider = new ReactorProvider();
-                final ReactorHandlerProvider handlerProvider = new ReactorHandlerProvider(provider);
+                final ReactorHandlerProvider handlerProvider = new ReactorHandlerProvider(provider, meter);
+                final AmqpLinkProvider linkProvider = new AmqpLinkProvider();
 
-                final EventHubAmqpConnection connection = new EventHubReactorAmqpConnection(connectionId,
-                    connectionOptions, eventHubName, provider, handlerProvider, tokenManagerProvider,
-                    messageSerializer);
+                final EventHubAmqpConnection connection
+                    = new EventHubReactorAmqpConnection(connectionId, connectionOptions, getEventHubName.get(),
+                        provider, handlerProvider, linkProvider, tokenManagerProvider, messageSerializer, false, false);
 
                 sink.next(connection);
             });
         });
 
         return connectionFlux.subscribeWith(new EventHubConnectionProcessor(
-            connectionOptions.getFullyQualifiedNamespace(), eventHubName, connectionOptions.getRetry()));
+            connectionOptions.getFullyQualifiedNamespace(), getEventHubName.get(), connectionOptions.getRetry()));
     }
 
-    private ConnectionOptions getConnectionOptions() {
-        Configuration buildConfiguration = configuration == null
-                ? Configuration.getGlobalConfiguration().clone()
-                : configuration;
+    private ReactorConnectionCache<EventHubReactorAmqpConnection>
+        buildConnectionCache(MessageSerializer messageSerializer, Meter meter, boolean useSessionChannelCache) {
+        final ConnectionOptions connectionOptions = getConnectionOptions();
+        final Supplier<String> getEventHubName = () -> {
+            if (CoreUtils.isNullOrEmpty(eventHubName)) {
+                throw LOGGER
+                    .logExceptionAsError(new IllegalArgumentException("'eventHubName' cannot be an empty string."));
+            }
+            return eventHubName;
+        };
+        return v2StackSupport.createConnectionCache(connectionOptions, getEventHubName, messageSerializer, meter,
+            useSessionChannelCache);
+    }
+
+    ConnectionOptions getConnectionOptions() {
+        Configuration buildConfiguration
+            = configuration == null ? Configuration.getGlobalConfiguration().clone() : configuration;
 
         if (credentials == null) {
             final String connectionString = buildConfiguration.get(AZURE_EVENT_HUBS_CONNECTION_STRING);
 
             if (CoreUtils.isNullOrEmpty(connectionString)) {
-                throw logger.logExceptionAsError(new IllegalArgumentException("Credentials have not been set. "
+                throw LOGGER.logExceptionAsError(new IllegalArgumentException("Credentials have not been set. "
                     + "They can be set using: connectionString(String), connectionString(String, String), "
                     + "credentials(String, String, TokenCredential), or setting the environment variable '"
                     + AZURE_EVENT_HUBS_CONNECTION_STRING + "' with a connection string"));
@@ -754,84 +1179,78 @@ public class EventHubClientBuilder {
         }
 
         if (proxyOptions == null) {
-            proxyOptions = getDefaultProxyConfiguration(buildConfiguration);
+            proxyOptions = ProxyOptions.fromConfiguration(buildConfiguration);
         }
 
         // If the proxy has been configured by the user but they have overridden the TransportType with something that
         // is not AMQP_WEB_SOCKETS.
-        if (proxyOptions != null && proxyOptions.isProxyAddressConfigured()
+        if (proxyOptions != null
+            && proxyOptions.isProxyAddressConfigured()
             && transport != AmqpTransportType.AMQP_WEB_SOCKETS) {
-            throw logger.logExceptionAsError(new IllegalArgumentException(
-                "Cannot use a proxy when TransportType is not AMQP Web Sockets."));
+            throw LOGGER.logExceptionAsError(
+                new IllegalArgumentException("Cannot use a proxy when TransportType is not AMQP Web Sockets. "
+                    + "Use the setter 'transportType(AmqpTransportType.AMQP_WEB_SOCKETS)' to enable Web Sockets mode."));
+        }
+
+        if (CoreUtils.isNullOrEmpty(fullyQualifiedNamespace)) {
+            throw LOGGER.logExceptionAsError(
+                new IllegalArgumentException("'fullyQualifiedNamespace' cannot be an empty string."));
         }
 
         final CbsAuthorizationType authorizationType = credentials instanceof EventHubSharedKeyCredential
             ? CbsAuthorizationType.SHARED_ACCESS_SIGNATURE
             : CbsAuthorizationType.JSON_WEB_TOKEN;
 
-        final SslDomain.VerifyMode verificationMode = verifyMode != null
-            ? verifyMode
-            : SslDomain.VerifyMode.VERIFY_PEER_NAME;
+        SslDomain.VerifyMode verificationMode = verifyMode != null ? verifyMode : SslDomain.VerifyMode.VERIFY_PEER_NAME;
+
+        final boolean usingDevelopmentEmulator
+            = connectionStringProperties != null && connectionStringProperties.useDevelopmentEmulator();
+
+        if (usingDevelopmentEmulator) {
+            verificationMode = SslDomain.VerifyMode.ANONYMOUS_PEER;
+        }
 
         final ClientOptions options = clientOptions != null ? clientOptions : new ClientOptions();
-        final Map<String, String> properties = CoreUtils.getProperties(EVENTHUBS_PROPERTIES_FILE);
-        final String product = properties.getOrDefault(NAME_KEY, UNKNOWN);
-        final String clientVersion = properties.getOrDefault(VERSION_KEY, UNKNOWN);
 
-        if (customEndpointAddress == null) {
-            return new ConnectionOptions(fullyQualifiedNamespace, credentials, authorizationType,
-                ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler,
-                options, verificationMode, product, clientVersion);
+        final String hostname;
+        final int port;
+
+        if (customEndpointAddress != null) {
+            hostname = customEndpointAddress.getHost();
+            port = customEndpointAddress.getPort();
+        } else if (connectionStringProperties != null) {
+            final URI endpoint = connectionStringProperties.getEndpoint();
+            hostname = endpoint.getHost();
+            port = endpoint.getPort();
         } else {
-            return new ConnectionOptions(fullyQualifiedNamespace, credentials, authorizationType,
-                ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler,
-                options, verificationMode, product, clientVersion, customEndpointAddress.getHost(),
-                customEndpointAddress.getPort());
+            hostname = fullyQualifiedNamespace;
+            port = -1;
         }
+
+        // No explicit port was listed, so choose a default port.
+        final int portToUse = port != -1 ? port : getPort(transport, usingDevelopmentEmulator);
+        final boolean enableSsl = !usingDevelopmentEmulator;
+
+        return new ConnectionOptions(fullyQualifiedNamespace, credentials, authorizationType,
+            ClientConstants.AZURE_ACTIVE_DIRECTORY_SCOPE, transport, retryOptions, proxyOptions, scheduler, options,
+            verificationMode, LIBRARY_NAME, LIBRARY_VERSION, hostname, portToUse, enableSsl);
     }
 
-    private ProxyOptions getDefaultProxyConfiguration(Configuration configuration) {
-        ProxyAuthenticationType authentication = ProxyAuthenticationType.NONE;
-        if (proxyOptions != null) {
-            authentication = proxyOptions.getAuthentication();
+    private static int getPort(AmqpTransportType transport, boolean useDevelopmentEmulator) {
+        if (useDevelopmentEmulator) {
+            return ConnectionHandler.AMQP_PORT;
         }
 
-        String proxyAddress = configuration.get(Configuration.PROPERTY_HTTP_PROXY);
+        switch (transport) {
+            case AMQP:
+                return ConnectionHandler.AMQPS_PORT;
 
-        if (CoreUtils.isNullOrEmpty(proxyAddress)) {
-            return ProxyOptions.SYSTEM_DEFAULTS;
-        }
+            case AMQP_WEB_SOCKETS:
+                return WebSocketsConnectionHandler.HTTPS_PORT;
 
-        return getProxyOptions(authentication, proxyAddress, configuration,
-            Boolean.parseBoolean(configuration.get("java.net.useSystemProxies")));
-    }
-
-    private ProxyOptions getProxyOptions(ProxyAuthenticationType authentication, String proxyAddress,
-                                         Configuration configuration, boolean useSystemProxies) {
-        String host;
-        int port;
-        if (HOST_PORT_PATTERN.matcher(proxyAddress.trim()).find()) {
-            final String[] hostPort = proxyAddress.split(":");
-            host = hostPort[0];
-            port = Integer.parseInt(hostPort[1]);
-            final Proxy proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(host, port));
-            final String username = configuration.get(ProxyOptions.PROXY_USERNAME);
-            final String password = configuration.get(ProxyOptions.PROXY_PASSWORD);
-            return new ProxyOptions(authentication, proxy, username, password);
-        } else if (useSystemProxies) {
-            // java.net.useSystemProxies needs to be set to true in this scenario.
-            // If it is set to false 'ProxyOptions' in azure-core will return null.
-            com.azure.core.http.ProxyOptions coreProxyOptions = com.azure.core.http.ProxyOptions
-                .fromConfiguration(configuration);
-            Proxy.Type proxyType = coreProxyOptions.getType().toProxyType();
-            InetSocketAddress coreProxyAddress = coreProxyOptions.getAddress();
-            String username = coreProxyOptions.getUsername();
-            String password = coreProxyOptions.getPassword();
-            return new ProxyOptions(authentication, new Proxy(proxyType, coreProxyAddress), username, password);
-        } else {
-            logger.verbose("'HTTP_PROXY' was configured but ignored as 'java.net.useSystemProxies' wasn't "
-                + "set or was false.");
-            return ProxyOptions.SYSTEM_DEFAULTS;
+            default:
+                throw LOGGER
+                    .logThrowableAsError(new IllegalArgumentException("Transport Type is not supported: " + transport));
         }
     }
 }
